<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="10dp"
    android:orientation="vertical"
    tools:context="br.com.aula.CadastroActivity" >

     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/nomeet"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="text"
            android:ems="10"
            android:hint="@string/nometv" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/senhaUsuarioet"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textPassword"
            android:ems="10"
            android:hint="@string/senhaUsuariotv" />

        <EditText
            android:id="@+id/senhaConfirmaet"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textPassword"
            android:ems="10"
            android:hint="@string/senhaConfirmatv" />

        <EditText
            android:id="@+id/emailet"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:hint="@string/emailtv" />

        <Button
            android:id="@+id/cadastrarbt"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cadastrarbt" />
    </LinearLayout>
   
</RelativeLayout>
